--- a/src/components/styles/Header.module.css
+++ b/src/components/styles/Header.module.css
@@ -6,7 +6,7 @@
 }
 
 .logo {
-  width: 10vw;
+  width: 12.5rem;
 }
 
 .title {
@@ -23,6 +23,7 @@
   list-style-type: none;
   font-size: 2.0rem;
   padding-right: 2.5rem;
+  gap: 2.5rem;
 }
 
 .item {
